Remove unnecessary project files and configurations